--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,17 @@ body.modal-open .container-fluid{
   -ms-filter: blur(5px);
   filter: blur(5px);  
 }
+.jumbotron{
+  background-color: #202225;
+}
 .name{
-  font: 6vw 'Berkshire Swash', Helvetica, sans-serif;
-  color: #2b2b2b;
-  text-shadow: 1px 1px 0px #ededed, 4px 4px 0px rgba(0,0,0,0.15);
-  text-align: center;
+  font-family: 'Lobster', cursive;
+  font-size: 7vw;
+  /* font: 6vw 'Bershire Swash', Helvetica, sans-serif; */
+  color: white;
+  /* text-shadow: 1px 1px 0px #ededed, 4px 4px 0px rgba(0,0,0,0.15); */
+  text-align: left;
+  float: left;
 }
 #about-image, #port-image{
   margin-right: 2%;
@@ -26,4 +32,9 @@ body.modal-open .container-fluid{
 }
 .contactForm{
   padding: 1%;
+}
+.socialIcons{
+  color: white;
+  size: 4vw;
+  float: right;
 }
