--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ a{
 }
 .card{
   padding: 0px;
+  margin-bottom: 2em;
 }
 .work{
   width: 18rem;
@@ -49,3 +50,18 @@ a{
 #btn:hover {
   border: 3px solid white;
 }
+.card-img-sm{
+  display: none;
+}
+
+@media only screen and (max-width: 576px){
+  .card-img{
+    display: none;
+  }
+  .card-img-sm{
+    display: block;
+    margin: 0;
+    align-content: center;
+  }
+  
+} 
